--- a/index.html
+++ b/index.html
@@ -11,18 +11,11 @@
                 const qty = document.getElementById('qty').value;
                 const category = document.getElementById('category').value;
 
-                fetch('https://script.google.com/macros/s/AKfycbxOT47luKRd1FAXaYtRnhFfL3CypFZOS-0wEevYGJs_aF7hsu9A5MRDvLXdsHQWftkE/exec', {
-                    method: 'POST',
-                    mode: 'cors', 
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ item, qty, category })
-                })
-                .then(response => {
-                    if (!response.ok) { throw new Error("Network response was not ok"); }
-                    return response.json();
-                })
-                .then(data => console.log("Success:", data))
-                .catch(error => console.error("Fetch Error:", error));
+              fetch('https://script.google.com/macros/s/AKfycbxOT47luKRd1FAXaYtRnhFfL3CypFZOS-0wEevYGJs_aF7hsu9A5MRDvLXdsHQWftkE/exec')
+.then(response => response.text())
+.then(data => console.log("Success:", data))
+.catch(error => console.error("Fetch Error:", error));
+
 
             });
         });
