--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@
             document.getElementById('inventoryForm').addEventListener('submit', function(e) {
                 e.preventDefault();
                 
-                const item = document.getElementById('item').value;
-                const qty = document.getElementById('qty').value;
-                const category = document.getElementById('category').value;
-
-              fetch('https://script.google.com/macros/s/AKfycbxOT47luKRd1FAXaYtRnhFfL3CypFZOS-0wEevYGJs_aF7hsu9A5MRDvLXdsHQWftkE/exec')
-.then(response => response.text())
-.then(data => console.log("Success:", data))
-.catch(error => console.error("Fetch Error:", error));
-
-
+                fetch('https://script.google.com/macros/s/AKfycbxOT47luKRd1FAXaYtRnhFfL3CypFZOS-0wEevYGJs_aF7hsu9A5MRDvLXdsHQWftkE/exec')
+                .then(response => response.text())
+                .then(data => console.log("Success:", data))
+                .catch(error => console.error("Fetch Error:", error));
             });
         });
     </script>
@@ -25,10 +19,7 @@
     <h2>Inventory Manager</h2>
     
     <form id="inventoryForm">
-        <input type="text" id="item" placeholder="Item Name" required />
-        <input type="number" id="qty" placeholder="Quantity" required />
-        <input type="text" id="category" placeholder="Category" required />
-        <button type="submit">Add</button>
+        <button type="submit">Test Fetch</button> <!-- Simplified form for testing -->
     </form>
 </body>
 </html>
