--- a/index.html
+++ b/index.html
@@ -29,4 +29,9 @@
     
     <form id="inventoryForm">
         <input type="text" id="item" placeholder="Item Name" required />
-        <input
+        <input type="number" id="qty" placeholder="Quantity" required />
+        <input type="text" id="category" placeholder="Category" required />
+        <button type="submit">Add</button>
+    </form>
+</body>
+</html>
