--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
                     headers: { "Content-Type": "text/plain;charset=utf-8" },
                     body: JSON.stringify({ item, qty, category })
                 })
-                .then(response => {
-                    if (!response.ok) { throw new Error(`HTTP error! Status: ${response.status}`); }
-                    return response.json();
-                })
+                .then(response => response.json())
                 .then(data => console.log("Success:", data))
                 .catch(error => console.error("Fetch Error:", error));
             });
@@ -35,7 +32,7 @@
         <input type="text" id="item" placeholder="Item Name" required />
         <input type="number" id="qty" placeholder="Quantity" required />
         <input type="text" id="category" placeholder="Category" required />
-        <button type="submit">Add</button>
+        <button type="submit">Add item</button>
     </form>
 </body>
 </html>
