--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 const qty = document.getElementById('qty').value;
                 const category = document.getElementById('category').value;
 
-                fetch('https://script.google.com/macros/s/AKfycbwsj_6iJ1cspP50qVd0U718r1gXa51G6x_IYvPSZ4Pt9vXuMO0FX14WdLIb2t11OQM/exec', {
+                fetch('https://script.google.com/macros/s/AKfycbypuQpHaqQcpxGs2NvOAiWo9odY5SChw35QI3IcHQnv5sI8UNDndferYd-bP81UsJEg/exec', {
                     method: 'POST',
                     mode: 'cors', 
                     redirect: "follow",
@@ -32,7 +32,7 @@
         <input type="text" id="item" placeholder="Item Name" required />
         <input type="number" id="qty" placeholder="Quantity" required />
         <input type="text" id="category" placeholder="Category" required />
-        <button type="submit">Add item</button>
+        <button type="submit">Add</button>
     </form>
 </body>
 </html>
