--- a/index.html
+++ b/index.html
@@ -47,4 +47,9 @@
     <form id="inventoryForm">
         <input type="text" id="item" placeholder="Item Name" required />
         <input type="number" id="qty" placeholder="Quantity" required />
-        <input
+        <input type="text" id="category" placeholder="Category" required />
+        <input type="file" id="images" accept="image/*" multiple /> <!-- ✅ Allows multiple or single files -->
+        <button type="submit">Add</button>
+    </form>
+</body>
+</html>
